[tool.poetry]
name = "deepsearch-glm"
version = "0.9.1"
description = "Graph Language Models"
authors = ["Peter Staar <taa@zurich.ibm.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "deepsearch_glm"}]
include = [
    {path = "deepsearch_glm/*.so", format = "wheel"}
]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.8"
deepsearch-toolkit = "^0.31.0"
textColor = "^3.0.1"
tabulate = "^0.8.9"
#numpy = "^1.25.0"
numpy = "^1.24.4"
pandas = "^2.0.3"
matplotlib = "^3.7.1"
networkx = "^3.1"
netwulf = "^0.1.5"
python-dotenv = "^1.0.0"
pybind11 = "^2.10.4"
numerize = "^0.12"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"


[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
isort = "^5.13.2"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#[tool.poetry.build]
#script = "build.py"